assets/styles.css
body {
  padding-top: 50px;
}

.logo {
  width: 60px;
}

.testimonial-wrapper {
  background-color: pink;
}

.top {
  /*margin-bottom: 0px;
  margin-top: 0px;*/
  background-image: url("images/incar.jpg");
  background-position: 0% 25%;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  text-align: center;
  color: white;
  /*opacity: .6;*/
  height: 500px;
}

.form-inline {
  padding: 10px;
}

.about {
  /*margin-bottom: 0px;
  margin-top: 0px;*/
  background-image: url("images/track-copy.jpg");
  background-position: 0% 25%;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  text-align: center;
  color: white;
  /*opacity: .6;*/
  height: 700px;
}


.jumbotron {
  text-align: center;
}

.img-circle {
  padding: 20px;
}

.page-header {
  padding: 5px 50px 5px 50px;
}

.footer-bottom {
  margin: 0;
}

.main-container {
  padding: 0 50px;
}

.active a {
  text-decoration: underline;
}

